removing formal to stick 16 pages

--- a/main.tex
+++ b/main.tex
@@ -76,7 +76,7 @@
 \input{intro}
 \input{problem}
 \input{proposal}
-\input{formalisation}
+% \input{formalisation}
 \input{evaluation}
 \input{related}
 \input{conclusion}
