--- a/main.tex
+++ b/main.tex
@@ -57,7 +57,7 @@
 \begin{abstract}  
   In this paper, we introduce AgentSpeak(ER), an extension of the
   AgentSpeak(L) language tailored to support encapsulation. The
-  AgentSpeak(ER) extention allows for significantly improving the
+  AgentSpeak(ER) extension allows for significantly improving the
   style of BDI agent programming along relevant aspects, including
   program modularity and readability, failure handling, and reactive
   as well as goal-based reasoning. The paper introduces the novel
