--- a/evaluation.tex
+++ b/evaluation.tex
@@ -1,8 +1,8 @@
 \section{Evaluation}
 \label{sec:evaluation}
 The new language has been evaluated through a prototype implementation that builds on 
-the ASTRA~\cite{DBLP:conf/prima/CollierRL15} language.  As can be seen in the  snippet 
-of code above, the implementation of the {\aser} prototype is syntactically different 
+the ASTRA~\cite{DBLP:conf/prima/CollierRL15} language.  As can be seen in the snippet 
+of code below, the implementation of the {\aser} prototype is syntactically different 
 to the examples provided in Section~\ref{sec:proposal}. This reflects the syntactic 
 approach adopted in ASTRA. It does not impact the associated semantics.
 
@@ -20,25 +20,23 @@ g-plan +!g() : c <: gc {
 }
 \end{verbatim}}
 
-In the section below, we use our prototype language to reimplement part of an existing 
-simulation of the Minority Game~\cite{moro2004minority}.
-
 \subsection{Minority Game}
 \label{minority}
-The Minority Game (MG) is a well-known model for evaluating collective behaviour of agents competing 
-for finite resources~\cite{moro2004minority}. In a nutshell, the game involves an odd number of
+To evaluate our prototype, we have adapted an existing program, introducing {\aser} goal
+rules to a subset of the implementation. Specifically, we have adapted a simulation of
+the Minority Game (MG), a well-known model for evaluating collective behaviour of agents competing 
+for finite resources~\cite{moro2004minority}. The game involves an odd number of
 agents competing for a resource over a series of rounds. For a round, each agent makes a binary
 decision (yes/no). At the end of the round, the bids are counted, and the agents that are in the
 minority win. The game has been applied mainly in the areas such as modelling financial markets 
 \cite{challet2013minority} and traffic simulation \cite{chmura2004minority}.
 
-To provide an initial evaluation of {\aser}, we adapt an existing ASTRA-based implementation of 
-the Minority Game (MG). As is shown in Figure~\ref{fig:mgagents}, the implementation consists of
-3 types of agent: the \emph{compere} agent, who is responsible for managing the game (starting 
-rounds, evaluating bids, ...); the \emph{player} agent, who implements a set of MG strategies; 
-and the \emph{main} agent, which is responsible for configuring the game (creating and configuring
-the compere and player agents). Interaction between the Compere and the Players is through a shared 
-game-board artifact implemented using CArtAgO \cite{...}.
+The existing implementation (see Figure~\ref{fig:mgagents}) consists of 3 types of agent: the 
+\emph{compere} agent, who is responsible for managing the game (starting rounds, evaluating bids,
+ ...); the \emph{player} agents, who implement a set of MG strategies; and the \emph{main} agent, 
+ which is responsible for configuring the game (creating and configuring the compere and player 
+ agents). Interaction between the compere and the players is through a shared game-board artifact 
+ implemented using CArtAgO \cite{...}.
 
 \begin{figure}[!tbh]
 \centering
@@ -47,8 +45,8 @@ game-board artifact implemented using CArtAgO \cite{...}.
 \label{fig:mgagents}
 \end{figure}
 
-The existing implementation currently consist 2 types of plan: configuration plans, one of which is
-called when the agent is created; and strategy plans which implement the various potential strategies
+The existing implementation currently consists of 2 types of plan: \emph{configuration plans}, one of which is
+called when the agent is created; and \emph{strategy plans} which implement the various potential strategies
 that the agent can use. A subset of the ASTRA implementation of the \emph{player} agent is given below:
 
 {\small
@@ -92,32 +90,33 @@ that the agent can use. A subset of the ASTRA implementation of the \emph{player
   }
 \end{verbatim}}
 
-In a nutshell, the \verb|!main(...)| plans are the configuration plans. The \verb|!setup_tactic(...)| 
+In the above code, the \verb|!main(...)| plans are the configuration plans. The \verb|!setup_tactic(...)| 
 plans are part of the bestplay strategy but are also used for configuration. This is because, unlike
 simpler strategies such as \emph{Random Bid} and \emph{Tit-for-Tat}, the best play strategy requires 
-that a set of random strategies be created as part of its configuration. A random strategy is
-a random history of the outcomes of the last N rounds combined with a recommended next move. Each
-strategy has an associated score which is used to help determine how successful each strategy is.
+that a set of random strategies be created as part of its configuration. In best play, a random strategy is
+a randomly generated set of \verb|h| outcomes combined with a recommended next move. Each strategy has 
+an associated score which is used to help determine how successful each strategy is.
 
 The strategy plans are the \verb|$cartago.signal(...)| plans, which handle the \verb|play()| 
-and \verb|winner(...)| events respectively. These events are generated by the game board via operations
-performed by the \emph{compere} agent (e.g. when a round starts/ends). For bestplay, the 
-\verb|play()| event results in the agent comparing the outcome history against its strategies. The 
-strategy that best fits the history is selected and the corresponding next move is played (via 
-the \verb|bid()| artifact operation). Conversely, the \verb|winner(...)| event results in the 
-agent updating the score for all strategies that lead to \verb|bid| being selected.
+and \verb|winner(...)| signals respectively. These signals are generated by the game board when 
+the  \emph{compere} agent performs operations on it (e.g. when a round starts/ends). For bestplay, the 
+\verb|play()| signal triggers a behaviour where the agent compares the game outcome history against 
+its strategies and picks the strategy that best fits the history (longest matching subsequence). The
+corresponding next move is played (via the \verb|bid()| artifact operation). Conversely, the 
+\verb|winner(...)| signal triggers a behaviour where the agent updating the score for all 
+strategies that lead to \verb|bid| being selected.
 
-Some of the key points to note when reviewing the above code include: (i) a custom rule is needed 
+Some of the key points to note when reviewing the above code are: (i) a custom plan is needed 
 to handle the \verb|!main(...)| goal in the case of the bestplay strategy because it requires
 some custom initialisation; (ii) a strategy belief is required to enable the identification of the
-rules that are relevent to the selected strategy; and (iii) there is no guarantee that these
-rules will be grouped together in the implemented agent. They could be spread throughout the
+plans that are relevent to the selected strategy; and (iii) there is no guarantee that these
+plans will be grouped together in the implemented agent. They could be spread throughout the
 agents codebase making it difficult to read and understand the overall behaviour.
 
 In the {\aser} implementation, we still maintain the two types of plan, however instead on needing
 multiple plans to capture a strategy, the entire strategy is now encapsulated within a single
-g-plan. The snippet of code below contains the {\aser} code to the ASTRA example given above:
-
+g-plan (of course the other plans still exist as subplans of the g-plan). The snippet of code 
+below contains the {\aser} code to the ASTRA example given above:
 
 {\small
 \begin{verbatim}
@@ -166,16 +165,14 @@ g-plan. The snippet of code below contains the {\aser} code to the ASTRA example
 
 As can be seen from the above snippet of code. The implementation of the two types of agent
 is quite similar. In fact many of the rule implementations have not changed significantly.
-
 However, there are a few interesting observations regarding the revised implementation: (i) the 
 compexity of the plan contexts were simplified when using g-plans because the g-plan itself 
 provided some of the context; (ii) the number of arguments passed as parameters was reduced, 
 again because the scope of the parameters of the g-plan was the plan body \emph{and} all of 
 its sub-plans; (iii) the total number of rules under consideration on each iteration was
 significantly less because only the rules within an active g-plan were considered by the
-agent --- for example, in the original implementation, there was always at least one
-applicable plan per strategy for each of the cartago events, whilst in the 
-new implementation only those plans related to the current strategy were applicable.
+agent. This means that, when an agent has multiple strategies, only the rules relating to
+the active strategy will be considered, whereas in ASTRA, all rules are always considered.
 
 \subsection{A Note on Performance}
 \label{performance}
